--- a/HW11/Makefile
+++ b/HW11/Makefile
@@ -1,4 +1,4 @@
 all:
-	g++ -std=c++11 kruskalMST.cpp -o kruskalMST -fpermissive
+	g++ -std=c++11 kruskalMST.cpp -o kruskalMST 
 clean:
 	$(RM) kruskalMST
